name:                carma-sync
version:             0.1.0.0
synopsis:            Save carma models to postgresql
homepage:            https://github.com/mvoidex/carma-sync
license:             BSD3
license-file:        LICENSE
author:              Alexandr `Voidex` Ruchkin
maintainer:          voidex@live.com
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules:
    Carma.ModelTables
  other-modules:
  build-depends:
    base >= 4.6 && < 5.0,
    aeson == 0.6.*,
    bytestring == 0.10.*,
    containers == 0.5.*,
    directory == 1.2.*,
    filepath == 1.3.*,
    MonadCatchIO-transformers == 0.3.*,
    postgresql-simple == 0.2.*,
    simple-log == 0.2.*,
    text == 0.11.*,
    transformers == 0.3.*,
    unordered-containers == 0.2.*
